--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "drizzle-orm": "^0.45.1",
     "next": "16.1.1",
     "pg": "^8.16.3",
+    "picomatch": "^2.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
