--- a/package.json
+++ b/package.json
@@ -6,12 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "db:generate": "npx drizzle-kit generate",
+    "db:migrate": "npx drizzle-kit migrate",
+    "db:studio": "npx drizzle-kit studio"
   },
   "dependencies": {
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-email/components": "^1.0.4",
+    "@react-email/render": "2.0.2",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -23,6 +28,7 @@
     "picomatch": "^2.3.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "resend": "^6.7.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
