--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^1.0.4",
     "@react-email/render": "2.0.2",
+    "@tiptap/extension-placeholder": "^3.9.1",
+    "@tiptap/pm": "^3.9.1",
+    "@tiptap/react": "^3.9.1",
+    "@tiptap/starter-kit": "^3.9.1",
+    "@uploadthing/react": "^7.3.3",
     "better-auth": "^1.4.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -42,7 +47,8 @@
     "react-dom": "19.2.3",
     "resend": "^6.7.0",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "uploadthing": "^7.7.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
