--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "nuqs": "^2.8.6",
     "pg": "^8.16.3",
     "picomatch": "^2.3.1",
     "react": "19.2.3",
